# dnfolio

./: .gitignore  .hintrc  .prettierrc  Cargo.toml  Makefile.toml  README.md  _config.ts  build.ps1  build_script.rs  bun.lockb  config.toml  deno.json  djlint.toml  dprint.json  index.md  legacy-urls.toml  mdsvex.config.js  package.json  pnpm-lock.yaml  svelte.config.js  vite.config.ts  wrangler.toml
.github/workflows/: deploy.yaml  deploy.yml  pages-deploy.yaml
.vim/: coc-settings.json
.vitepress/: config.mts
.vitepress/config/: en.ts  index.ts  ja.ts  shared.ts
.vitepress/theme/: BlogHeader.vue  ToggleAppearance.vue  custom.css  index.ts  style.css
blog/: index.md
blog/add-blockquote-style/: index.md
blog/add-mdit-plugin-alert/: index.md
blog/adjusted-img/: index.md
blog/build-with-lume/: index.md
blog/changed-bluesky-handle-to-my-domain/: index.md
blog/customised-vitepress-search/: index.md
blog/migrated-vitepress-from-lume/: index.md
blog/updated-ogp-setting-in-post-page/: index.md
blog_builder/: Cargo.toml
blog_builder/src/: main.rs
content/: 2025-01-06_first.md  2025-01-07_dnfolioをVitePressからZolaへ移行中.ja.md  2025-01-07_dnfolioをVitePressからZolaへ移行中.md  2025-01-07_n回目の個人サイト引越しを検討中.ja.md  2025-01-07_n回目の個人サイト引越しを検討中.md  2025-01-08_Zolaのshortcodesを使ってみた.ja.md  2025-01-08_Zolaのshortcodesを使ってみた.md  2025-01-08_updated-templates-for-axum-and-tera.md  2025-01-08_コードフォーマッターにdprintを使ってみた.ja.md  2025-01-08_コードフォーマッターにdprintを使ってみた.md  2025-01-09_Xへの共有ボタンを記事に追加した.ja.md  2025-01-09_Xへの共有ボタンを記事に追加した.md  2025-01-09_bun upgradeに失敗した.ja.md  2025-01-09_bun upgradeに失敗した.md  2025-01-09_changed-bluesky-handle-to-my-domain.md  2025-01-09_created-share-button-for-bluesky.md  2025-01-09_個人サイトのdnfolioを大きく改修した.ja.md  2025-01-09_個人サイトのdnfolioを大きく改修した.md  2025-01-10_htmldjangoファイルのフォーマットに成功した.md  2025-01-12_個人サイト開発にcargo-makeを導入した.md  2025-01-13_個人サイトの改修記録その2.ja.md  2025-01-13_個人サイトの改修記録その2.md  2025-01-14_GitHubのREADMEをシンプルにした.ja.md  2025-01-14_GitHubのREADMEをシンプルにした.md  2025-01-15_changed-tld.md  2025-01-17_workers-rsを試してみた.ja.md  2025-01-17_workers-rsを試してみた.md  2025-01-18_LAPRASに登録してみた.md  2025-01-20_試験的にリーディングタイムを表示してみた.ja.md  2025-01-20_試験的にリーディングタイムを表示してみた.md  2025-01-21_個人的ノート管理2025年1月.ja.md  2025-01-21_個人的ノート管理2025年1月.md  2025-01-31_NeovimでGoの環境構築.ja.md  2025-01-31_NeovimでGoの環境構築.md  2025-02-07_developing a CLI tool called thumbgen.md  2025-02-19_coc.nvimからnvim-lspconfigへの移行.md  2025-02-24_WSL2環境構築(Zsh, Neovim).ja.md  2025-02-24_WSL2環境構築(Zsh, Neovim).md  2025-03-20_dnfolioのUIを若干変更した.ja.md  2025-03-20_dnfolioのUIを若干変更した.md  (+51 more)
content/about/: index.md
content/privacy/: index.md
crates/dnfolio-ssg/: Cargo.toml
crates/dnfolio-ssg/src/: build.rs  dates.rs  main.rs  models.rs  ogp.rs  redirects.rs  rss.rs  serve.rs  sitemap.rs  structured_data.rs
crates/dnfolio-ssg/src/templates/: base.rs  base_stylesheet.rs  icons.rs  mod.rs
crates/dnfolio-wasm/: Cargo.toml
crates/dnfolio-wasm/src/: error.rs  events.rs  lib.rs
crates/dnfolio-wasm/src/dom/: elements.rs  mod.rs  selection.rs  walker.rs
crates/dnfolio-wasm/src/search/: highlight.rs  index.rs  mod.rs  modal.rs  navigator.rs  tags.rs
crates/dnfolio-wasm/src/ui/: commandline.rs  currentline.rs  mod.rs  outline.rs  statusline.rs  toast.rs
crates/dnfolio-wasm/src/vim/: command.rs  cursor.rs  mod.rs  mode.rs  motion.rs  window.rs
crates/dnfolio-worker/: Cargo.toml  build.rs
crates/dnfolio-worker/src/: lib.rs
data/en/: daily-report.json
docs/: seo-implementation.md  url-structure.md
ja/: index.md
ja/blog/: index.md
pages/: about.md  privacy.md
sass/: _card.scss  _classes.scss  _codeblocks.scss  _pagefind.scss  _search.scss  _tags.scss  _vars.scss  style.scss
sass/foundation/: _classes.scss  _global.scss  _tags.scss  classes.scss
sass/shortcodes/: card.scss
src/: app.d.ts  app.html  build.rs  index.tsx  main.rs  metadata.rs  models.rs  ogp.rs  rss.rs  sitemap.rs
src/_data/: me.ts  meta.ts
src/_styles/: global.css  global.ts
src/about/: index.md
src/css/: global.css
src/lib/: config.ts  postsList.ts  taglist.ts  types.ts  utils.ts
src/posts/: 2024-11-18_build-with-lume.md  2024-11-19_add-blockquote-style.md  2024-11-19_add-mdit-plugin-alert.md  2024-11-20_adjusted-img.md  2024-11-20_changed-bluesky-handle-to-my-domain.md  2024-11-21_updated-ogp-setting-in-post-page.md  _data.ts
src/routes/: +layout.svelte  +page.svelte  about.rs  base.rs  mod.rs  post.rs  privacy.rs
static/: _header  _headers  robots.txt
templates/: 404.html  about.html  base.html  blog-page.html  blog.html  privacy.html  robots.txt
(+130 files in other folders)
