[package]
name = "dnfolio"
version = "5.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
axum = "0.8.4"
socket2 = "0.5.10"
thiserror = "2.0.12"
tokio = { version = "1.47.1", features = ["full"] }
tower-http = { version = "0.6.6", features = ["fs"] }
chrono = "0.4.41"
gray_matter = { version = "0.3.2", features = ["toml"] }
maud = "0.27.0"
rss = "2.0.12"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
syntect = "5.2.0"
walkdir = "2.5.0"
clap = { version = "4.5.41", features = ["derive"] }
rayon = "1.10.0"
pulldown-cmark = { version = "0.13.0", default-features = false, features = ["html"] }
slug = "0.1.6"
base64 = "0.22.1"
