[package]
name = "dnfolio-ssg"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
build = "../../build_script.rs"

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
axum.workspace = true
socket2.workspace = true
tokio.workspace = true
tower-http.workspace = true
gray_matter.workspace = true
maud.workspace = true
rss.workspace = true
walkdir.workspace = true
clap.workspace = true
rayon.workspace = true
pulldown-cmark.workspace = true
slug.workspace = true
base64.workspace = true
resvg.workspace = true
usvg.workspace = true
tiny-skia.workspace = true
image.workspace = true
fontdb.workspace = true
syntect.workspace = true
