[package]
name = "dnfolio-wasm"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
thiserror.workspace = true
log.workspace = true
serde.workspace = true
serde-wasm-bindgen = "0.6"
wasm-bindgen.workspace = true
wasm-bindgen-futures.workspace = true
js-sys.workspace = true

[dependencies.gloo]
workspace = true
features = ["events", "timers", "utils", "console"]

[dependencies.web-sys]
workspace = true
features = [
    "console",
    "Document",
    "DocumentFragment",
    "Element",
    "HtmlElement",
    "HtmlInputElement",
    "HtmlDivElement",
    "Node",
    "NodeFilter",
    "NodeList",
    "TreeWalker",
    "Window",
    "Selection",
    "Range",
    "DomRect",
    "DomTokenList",
    "CssStyleDeclaration",
    "Event",
    "KeyboardEvent",
    "MouseEvent",
    "InputEvent",
    "FocusEvent",
    "EventTarget",
    "ScrollBehavior",
    "ScrollIntoViewOptions",
    "ScrollLogicalPosition",
    "Clipboard",
    "Navigator",
    "History",
    "Location",
    "Url",
    "UrlSearchParams",
    "Text",
    "AddEventListenerOptions",
    # Fetch API
    "Headers",
    "Request",
    "RequestInit",
    "RequestMode",
    "Response",
]

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
all = "warn"
pedantic = "warn"
