[package]
name = "dnfolio-worker"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
build = "build.rs"

[package.metadata.release]
release = false

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lib]
crate-type = ["cdylib"]

[dependencies]
worker.workspace = true
worker-macros.workspace = true
console_error_panic_hook.workspace = true
phf = "0.13.1"

[build-dependencies]
phf_codegen = "0.13.1"
serde.workspace = true
slug.workspace = true
toml.workspace = true

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
all = "warn"
pedantic = "warn"
